Add arquivos atualizados

--- a/Primeiro site html.html
+++ b/Primeiro site html.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Willian Pontes</title>
-        <link rel="stylesheet" href="style.css">
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primeiro Site Html</title>
+            <link rel="stylesheet" href="Style.css">
             </head>
-       <body>
+               <body>
+        
         <header>
             <img src="https://m.media-amazon.com/images/I/71JOfcqjjgL._AC_SX355_.jpg" alt="van halen foto">
-        <h1>#id="title">Willian Pontes</h1>
-        </header>
+                        </header>
         <section>
             <header>
-                <h2>.class="subtitle">Posts</h2>
+                <h1>Homenagem ao Rock n Roll</h1>
+                <p>Primeiro site elaborado por Willian Pontes homenageando o Rock</p>
             </header>
-            <article>
-                <header>
-                <h3>.class="post_title">Post #1</h3>
+                           <header>
+                <dl>
+                    <dt>ROCK IN RIO</dt>
+                    <dd>Marco do Rock nacional</dd>
+                </dl>
                 <img src="https://i.ytimg.com/vi/ZgnoiP6JHBw/sddefault.jpg" alt="ilustracao">
             </header>
-            <p>
-                Welcome to your life
-                <a href="https://www.linkedin.com/in/willian-pontes-210a4871/" target="_blank">
-                There's no turning back</a>
-Even while we sleep
-We will find you
-<a href="mailto:willianpontes2@gmail.com"</a>
-Acting on your best behavior
-Turn your back on Mother Nature
-            </p>
-            </article>
-        </section>
-        <footer>
+            <h2>Bandas famosas</h2>
+            <h3>
             <ol>
+                <li> Van Halen</li>
+                <p>Banda formada pelos irmãos Alex e Edward</p>
+                <li><mark> Iron Maiden</mark></li>
+                <p>Banda criada pelo baixista Steve Harris</p>
+                <li>Queen</li>
+                <li>Guns n Roses</li>
+            </ol>
+        </h3>
+
+    <picture>
+        <source media="(max-width: 999px)" srcset="Iron.png" type="image.png">
+        <img src="Iron.png" alt="Iron Maiden">
+    </picture>
+
+<h2>SHOW DO QUEEN:</h2>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LcQ1tX6V_x0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                  </section>
+
+        <footer>
+            <ul>
                 <li> 
                     <a href="mailto:willianpontes2@gmail.com">willianpontes2@gmail.com</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/willian-pontes-210a4871/" target="_blank">linkedin</a>
+                    <a href="https://www.linkedin.com/in/willian-pontes-210a4871/" target="_self" rel="external">linkedin</a>
                 </li>
                 <li>
-                    <a href="https://github.com/willianpontes2" target="_blank">github</a>
+                    <a href="https://github.com/willianpontes2" target="_blank" rel="external">github</a>
                 </li>
-            </ol>
+            </ul>
         </footer>        
     </body>
 </html>
